[gd_scene load_steps=5 format=3 uid="uid://dvlj2nsfbeja1"]

[ext_resource type="Script" uid="uid://cnv5kork06bl" path="res://Scripts/UI/menu.gd" id="1_3xj72"]
[ext_resource type="Texture2D" uid="uid://p8scof64hepa" path="res://Sprites/menu.png" id="2_e3d43"]
[ext_resource type="Texture2D" uid="uid://vpympcrxky3c" path="res://Sprites/logo.png" id="3_u1cc6"]
[ext_resource type="Texture2D" uid="uid://dwl4tsmq3aj5k" path="res://Sprites/knuckles.png" id="4_feg72"]

[node name="Menu" type="Node2D"]
process_mode = 3
script = ExtResource("1_3xj72")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(952, 553)
scale = Vector2(0.33, 0.33)
texture = ExtResource("2_e3d43")

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -393.0
offset_right = 146.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -293.5
offset_right = 100.0
offset_bottom = -129.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 11

[node name="Cardemomo" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Cardemomo"

[node name="Character2" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Character2"

[node name="Settings" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1663, 911)
scale = Vector2(0.40918, 0.534483)
texture = ExtResource("3_u1cc6")

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1734, 980)
scale = Vector2(0.40918, 0.534483)
texture = ExtResource("4_feg72")

[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/Cardemomo" to="." method="_on_cardemomo_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Cardemomo" to="." method="_on_cardemomo_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/Character2" to="." method="_on_character_2_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Character2" to="." method="_on_character_2_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
